Opened 15 years ago
Closed 15 years ago
#5072 closed bug (fixed)
iprowifi4965 assert failed on ConditionVariable Publish
Reported by: | tqh | Owned by: | colin |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Drivers/Network | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Fails on boot, see stacktrace. Tested in hrev34452.
Attachments (1)
Change History (2)
by , 15 years ago
Attachment: | panic_iprowifi4965_assert_failed.gif added |
---|
comment:1 by , 15 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
This bug was rooted in the misuse of ConditionalVariables. The FreeBSD compat layer used a hash table to manage all ConditionalVariables currently in use. This hash table made use of the same internal ConditionalVariable link as Haiku's ConditionalVariable hash does, leading to data structure corruptions.
Fixed in hrev34461.
Note:
See TracTickets
for help on using tickets.
Stacktrace