* Refactoring the condition variable and synchronization subsystem of the   freebsd compat layer. * Renaming functions where their names aren't preset by FreeBSD to stick   to the coding style guidelines. * Making use of static Notify functions of Haiku's ConditionalVariable   implementation. * Removing management of used ConditionalVariables within the compat layer.   This should also fix #5072.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@34461 a95241bf-73f2-0310-859d-f6bbb57e9c96