src/libs/compat/freebsd_network/compat/sys/condvar.h
@@ -10,11 +10,14 @@
 
 
 struct cv {
+	struct ConditionVariable* condition;
 	const char* description;
+	const void* waitChannel;
 };
 
 
 void cv_init(struct cv*, const char*);
+void cv_destroy(struct cv*);
 void cv_wait(struct cv*, struct mtx*);
 int cv_timedwait(struct cv*, struct mtx*, int);
 void cv_signal(struct cv*);
